# heirloom-find

./: GNUmakefile.am  configure.ac  find.c
